# Silero_VAD

./: .gitignore  Cargo.toml  README.md
examples/: offline.rs
src/: lib.rs  main.rs  utils.rs
