[package]
name = "silero_vad"
version = "0.1.0"
edition = "2021"
authors = ["Wenqing Zong"]
description = "Easy to use, pure Rust implementation of Silero VAD algorithm"
keywords = ["vad", "silero"]
license = "GPL-2.0"
repository = "https://github.com/WenqingZong/Silero_VAD"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
hound = "3.5.1"
log = "0.4.21"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ort = "2.0.0-rc.2"
rubato = "0.15.0"
symphonia = { version = "0.5.4", features = ["all"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[[bin]]
name = "offline"
path = "examples/offline.rs"
